# GLaDOS

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Pipfile  README.md  calibrations.csv  conanfile.py  conanfile.txt  homology.cpp
new_src/: client.py  server.cpp
src/: calibrations.csv  camera_mats.csv  client.py  face_recog_data.json  gen_facial_recog_data.cpp  homology.h  main.cpp  py_server.py  server.cpp
test/: video_encoding.py
utils/rapidcsv/src/: rapidcsv.h
